<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/issueStatusOpen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="#FF6F6F"
            android:gravity="center"
            android:padding="2dp"
            android:singleLine="true"
            android:text="@string/issue_status_open" />

        <TextView
            android:id="@+id/issueStatusAcknowledged"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="#7ADEE7"
            android:gravity="center"
            android:padding="2dp"
            android:singleLine="true"
            android:text="@string/issue_status_acknowledged" />

        <TextView
            android:id="@+id/issueStatusResolved"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="#65F550"
            android:gravity="center"
            android:padding="2dp"
            android:singleLine="true"
            android:text="@string/issue_status_resolved" />

        <TextView
            android:id="@+id/issueStatusClosed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="#C4C8C6"
            android:gravity="center"
            android:padding="2dp"
            android:singleLine="true"
            android:text="@string/issue_status_closed" />
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>